# ChangeLog for dev-util/eclipse-sdk
# Copyright 2003-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/eclipse-sdk/ChangeLog,v 1.117 2006/10/26 22:53:36 caster Exp $

  26 Oct 2006; Vlastimil Babka <caster@gentoo.org>
  -eclipse-sdk-3.0.1-r2.ebuild, -eclipse-sdk-3.0.2.ebuild:
  Remove ebuilds using deprecated mozilla USE flags for bug #137665.

  08 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
  eclipse-sdk-3.2.1-r1.ebuild:
  Made branded splash depend on branding use flag.

*eclipse-sdk-3.2.1-r1 (08 Oct 2006)

  08 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
  +eclipse-sdk-3.2.1-r1.ebuild:
  Updated to use patchset from fedora. New splash screen! See bug #150314.

*eclipse-sdk-3.2.1 (01 Oct 2006)

  01 Oct 2006; Joshua Nichols <nichoj@gentoo.org> +eclipse-sdk-3.2.1.ebuild:
  Version bump with help from Federico Fissore <justice@ngi.it>, bug #149574.

  28 Sep 2006; Joshua Nichols <nichoj@gentoo.org>
  eclipse-sdk-3.0.1-r3.ebuild:
  Added missing java-pkg inherit, for bug #147101.

  06 Jul 2006; Joshua Nichols <jnichols@gentoo.org>
  eclipse-sdk-3.0.1-r3.ebuild:
  Fixed jdk dep for 3.0.1.

*eclipse-sdk-3.0.2-r1 (06 Jul 2006)
*eclipse-sdk-3.0.1-r3 (06 Jul 2006)

  06 Jul 2006; Joshua Nichols <jnichols@gentoo.org>
  +eclipse-sdk-3.0.1-r3.ebuild, +eclipse-sdk-3.0.2-r1.ebuild:
  Disabling mozilla support in 3.0.x for bug #137665

  06 Jul 2006; Joshua Nichols <nichoj@gentoo.org>
  eclipse-sdk-3.0.1-r2.ebuild:
  Fixed JDK dependency for 3.0.1.

  06 Jul 2006; Joshua Nichols <jnichols@gentoo.org>
  -eclipse-sdk-3.1.1.ebuild, -eclipse-sdk-3.1.2-r2.ebuild:
  Pruning old revisions with SLOT='3.1'

*eclipse-sdk-3.2 (06 Jul 2006)
*eclipse-sdk-3.1.2-r3 (06 Jul 2006)

  06 Jul 2006; Joshua Nichols <jnichols@gentoo.org>
  eclipse-sdk-3.1.2-r2.ebuild, +eclipse-sdk-3.1.2-r3.ebuild,
  -eclipse-sdk-3.2_rc7-r1.ebuild, +eclipse-sdk-3.2.ebuild:
  Revision bump for 3.1.2 to disable embedded browser support (bug #137665).