@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 03-motif-java1.5-build.patch 1848 RMD160 274af67bdbfccb89ae4cf6b2ff431f8821c1aeac SHA1 4475c4cee33c4011b80170fd02b15b4a08db552d SHA256 3bd0d4812b95070a807c51c36c4bfd3cf9d1b509484b43b25ea9080e33269707
 MD5 8f66a016be8f50dc8f57353c8207c669 files/03-motif-java1.5-build.patch 1848
 RMD160 274af67bdbfccb89ae4cf6b2ff431f8821c1aeac files/03-motif-java1.5-build.patch 1848
@@ -55,7 +58,7 @@ DIST eclipse-sdk-3.2.1-patches.tar.bz2 24267 RMD160 b3ee64e3079ed6076d1f75db9ee7
 DIST eclipse-sdk-3.2.1-r1-patches.tar.bz2 85951 RMD160 55a0f98229feb47d936acbcdcf7ad42074ebdb5c SHA1 4af81d8615dbfbd771136c441ee8a7b53096b468 SHA256 fa9f8d047d8375ab55eaca12c110bd9faf9eb5452af2a70d038afd5a6b4b5171
 DIST eclipse-sourceBuild-srcIncluded-3.0.1.zip 55618511 RMD160 fba01eb0f019a888e9d9deb57ad7b284f218e783 SHA1 2302ee6160be86466a6e7ef265fff0431bee72e3 SHA256 5f6eb496d3db940b1085032a807337dbc477a0da9877a7cea50d39d32dfde050
 DIST eclipse-sourceBuild-srcIncluded-3.0.2.zip 55945573 RMD160 57f0b11c24a8e9982e6d446d14b4782112e5b1a7 SHA1 07324f2aa963e33aea269b89b879fb2d59b354e6 SHA256 0c9e961fbf11d782b0c8c743122e5cc8567f3b06f48f38d6b40a8a78ead567d9
-DIST eclipse-sourceBuild-srcIncluded-3.1.2.zip 66630673 RMD160 ffe59352fe02b4a47be3e9a6daad3a5501f196b0 SHA1 d399232b586e0c6b516f990296a202dcd814404d SHA256 31233332f205a197a42aafdc4f15a4f38eb5e4be19ac8a7192492ab8a21324a4
+DIST eclipse-sourceBuild-srcIncluded-3.1.2.zip 32549592 RMD160 aa0a8181a3921d75ff7d2d6f4a96339d74d7c8bf SHA1 d6e65863bfe996acd15f116d26e647f0f1e8b138 SHA256 f526187e6abca6460527a8f91448011345c420ee633beee83712cfea0c0a8353
 DIST eclipse-sourceBuild-srcIncluded-3.2.1.zip 82433420 RMD160 9648176b79adac7217371e5b8dee7aeb4cd458db SHA1 a27bae4ff9f866a1fab995eae2da00ab2be5e840 SHA256 2d6a0628333d068b6ab678c42f925d71df1c003035543830a30e3ee80fb855c7
 DIST eclipse-sourceBuild-srcIncluded-3.2.zip 82018640 RMD160 eadb8c5dde4ebe8b134fb35e6c42d08f52c145a7 SHA1 29ad412bd2778423e77337c034ad0382f9da172a SHA256 e9366fd3046be753f821be786156c472148928101cf6bf8f9d31b455cb6039da
 EBUILD eclipse-sdk-3.0.1-r3.ebuild 12992 RMD160 0e2c8822ff05c73650b19a6de789aaf8f1d57aec SHA1 565a5cec3665a49aa4488b6a718c8ecb5da6f758 SHA256 58b504c8ed01e0e26909f01b1760eeddc70d362b9d062336365c2de5782593ee
@@ -70,10 +73,10 @@ EBUILD eclipse-sdk-3.1.2-r3.ebuild 10602 RMD160 a2acd26ab238961dda0e7db667874e55
 MD5 ee36b3e067bfcc68ad409accd7537d87 eclipse-sdk-3.1.2-r3.ebuild 10602
 RMD160 a2acd26ab238961dda0e7db667874e55f0d1ad51 eclipse-sdk-3.1.2-r3.ebuild 10602
 SHA256 b133c1f00538d73171189a019125495c6594d442aae0b0ccdf6463e3a9b73b06 eclipse-sdk-3.1.2-r3.ebuild 10602
-EBUILD eclipse-sdk-3.2.1-r1.ebuild 12393 RMD160 44d73934214d4d0bb0b84e525617120fb74eeac7 SHA1 99b1c16bebead9b7dc813cf4afd493a7c63e8256 SHA256 779b373892657bbf9d410e0dad3d3b60f6595892f4f8127fae5d4dbe35f7ccc3
-MD5 7e6577c302eceaa98320511dbdb98384 eclipse-sdk-3.2.1-r1.ebuild 12393
-RMD160 44d73934214d4d0bb0b84e525617120fb74eeac7 eclipse-sdk-3.2.1-r1.ebuild 12393
-SHA256 779b373892657bbf9d410e0dad3d3b60f6595892f4f8127fae5d4dbe35f7ccc3 eclipse-sdk-3.2.1-r1.ebuild 12393
+EBUILD eclipse-sdk-3.2.1-r1.ebuild 12471 RMD160 01e0fd347c1199cc34c891ccc637c091bb17b90c SHA1 6c0a6efb383b543f501912b5b5f3773424d87929 SHA256 cf3364f2e5f3ec3fab16e204d6ad690ba43ad22af4224cd099e3c02575b4e04d
+MD5 39096ad36d1c7ef3915edb513ddc3b2c eclipse-sdk-3.2.1-r1.ebuild 12471
+RMD160 01e0fd347c1199cc34c891ccc637c091bb17b90c eclipse-sdk-3.2.1-r1.ebuild 12471
+SHA256 cf3364f2e5f3ec3fab16e204d6ad690ba43ad22af4224cd099e3c02575b4e04d eclipse-sdk-3.2.1-r1.ebuild 12471
 EBUILD eclipse-sdk-3.2.1.ebuild 8989 RMD160 fcfabf4eca82a9ae1b4fa5f4d9d7e652d1cb4763 SHA1 80e4e350fc1ca95342d3ea07960406b45fe2bc99 SHA256 02200dd1a855cd3d34aef655e15714a175256fc5be97a846484d8736617ed61d
 MD5 515b0143b70f57c9d71b1eb477e1dabd eclipse-sdk-3.2.1.ebuild 8989
 RMD160 fcfabf4eca82a9ae1b4fa5f4d9d7e652d1cb4763 eclipse-sdk-3.2.1.ebuild 8989
@@ -82,10 +85,10 @@ EBUILD eclipse-sdk-3.2.ebuild 9467 RMD160 1c5b06efce3b58f57f01d5ccafe433c7bdc756
 MD5 b1c5ef3ae89e8239d89765bd444834e2 eclipse-sdk-3.2.ebuild 9467
 RMD160 1c5b06efce3b58f57f01d5ccafe433c7bdc7561b eclipse-sdk-3.2.ebuild 9467
 SHA256 00c6f86a6f0bd7fd340e8e4ad7948d25b4794cc95899c74c64de91b1370413d2 eclipse-sdk-3.2.ebuild 9467
-MISC ChangeLog 23035 RMD160 5cb5848ae7f7f8393e078ca5721c8ae9afb532d3 SHA1 38ef583ac6628599a361c58b7c34f57c69a04b6b SHA256 d77c14d0cb4af65856c162228cfd8441c971c31e07cdfd351465c27a5a53d541
-MD5 61f780a8c6c2ffb0c53725bf890f876b ChangeLog 23035
-RMD160 5cb5848ae7f7f8393e078ca5721c8ae9afb532d3 ChangeLog 23035
-SHA256 d77c14d0cb4af65856c162228cfd8441c971c31e07cdfd351465c27a5a53d541 ChangeLog 23035
+MISC ChangeLog 23228 RMD160 3fe5ee7bce75a2b660b477cdb5d1d6ebefd23bb5 SHA1 bd2cade032ee997ce967753b28307df470efd674 SHA256 b70376076bb82495fb0f4d6e6886cf6861a7f28c1266c886fef498d1ba6df5a7
+MD5 077c76efd5dbc362e6911cf2efc43337 ChangeLog 23228
+RMD160 3fe5ee7bce75a2b660b477cdb5d1d6ebefd23bb5 ChangeLog 23228
+SHA256 b70376076bb82495fb0f4d6e6886cf6861a7f28c1266c886fef498d1ba6df5a7 ChangeLog 23228
 MISC metadata.xml 782 RMD160 5b8dc4f4b6bdd457da62f967ec176bee2ae7e5e4 SHA1 17bc63605d0a30dca27521cf908a69c0996eab07 SHA256 a1e6bbc5427799b8607d355e3e09ce7d4de98f2a365417ec158eb56f4f00746f
 MD5 8de14dda7d318d8fb514fdbcecd4058b metadata.xml 782
 RMD160 5b8dc4f4b6bdd457da62f967ec176bee2ae7e5e4 metadata.xml 782
@@ -96,9 +99,9 @@ SHA256 0de94c0723ef302003eab0a95ab2a1c38869a827d50c01984f74d1dfd83eb203 files/di
 MD5 e4fe184225b61ac63ba71f1157e0bb4e files/digest-eclipse-sdk-3.0.2-r1 310
 RMD160 370ff7e60e462001598b2f8357b463b9389071b7 files/digest-eclipse-sdk-3.0.2-r1 310
 SHA256 da189a7c7ddd6b1661391f5e149d905d79779d4863502d4b769216b19a5fed42 files/digest-eclipse-sdk-3.0.2-r1 310
-MD5 0dd05cebf3928888ff566c433da96335 files/digest-eclipse-sdk-3.1.2-r3 310
-RMD160 dea902b88d52673c42f034ab9451e145bc52b30c files/digest-eclipse-sdk-3.1.2-r3 310
-SHA256 01187ce1cad8c9037d48c130cd9d98167d7c934e075d42c7c55f3adae8105749 files/digest-eclipse-sdk-3.1.2-r3 310
+MD5 0f3fb6dc0ed5cff82326f0e092a2032b files/digest-eclipse-sdk-3.1.2-r3 310
+RMD160 563385bbb668a8a55af7b29151b6238cbdba8453 files/digest-eclipse-sdk-3.1.2-r3 310
+SHA256 d4d2281839daa264d860ec4dd919b70a778e19878873edbebd71a2c94a9c88b3 files/digest-eclipse-sdk-3.1.2-r3 310
 MD5 605794882dbb6032b2578f53103784e1 files/digest-eclipse-sdk-3.2 575
 RMD160 5b3897188894935f13640cd9fe8cad7346fab3ae files/digest-eclipse-sdk-3.2 575
 SHA256 9665c3d9e6f1eb99cb6bd255d70ec40f1a7d16aa720bb376e2079c97850da568 files/digest-eclipse-sdk-3.2 575
@@ -108,3 +111,10 @@ SHA256 f6dfe941dfe74e72e6a39c2f00dc1572f0d7851e796de4fcc6f1f7b49fe9c848 files/di
 MD5 2364957019ebba24ca9af9631f7a86c8 files/digest-eclipse-sdk-3.2.1-r1 596
 RMD160 130025e444efc3a79b198baa4b673b49b117400f files/digest-eclipse-sdk-3.2.1-r1 596
 SHA256 da442cfe724dbdf31b936830117b876bff94378e5bbb0e1162d12ce590de0e82 files/digest-eclipse-sdk-3.2.1-r1 596
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.1 (GNU/Linux)
+
+iD8DBQFFvKQxcxLzpIGCsLQRAuoZAKCcwBL8MMFa4ltBiUNSDfMo7I7yfgCdFEuc
+kUe6uR6H/9VksnWU4j2LQDo=
+=iZB9
+-----END PGP SIGNATURE-----
