@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/eclipse-sdk
-# Copyright 2003-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/eclipse-sdk/ChangeLog,v 1.117 2006/10/26 22:53:36 caster Exp $
+# Copyright 2003-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/eclipse-sdk/ChangeLog,v 1.118 2007/01/28 13:24:45 betelgeuse Exp $
+
+  28 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
+  eclipse-sdk-3.2.1-r1.ebuild:
+  Apply a quick fix for bug #163969. Still need to find out why popd and push
+  have changed behaviour.
 
   26 Oct 2006; Vlastimil Babka <caster@gentoo.org>
   -eclipse-sdk-3.0.1-r2.ebuild, -eclipse-sdk-3.0.2.ebuild:
